--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
 <link rel="icon" type="image/png" href="favicon.ico">
 <script src="js/jquery.min.js"></script>
+	<script data-ad-client="ca-pub-5144235776971895" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 <div class="top-banner">
