--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@ Author URL: http://w3layouts.com
 <!DOCTYPE HTML>
 <html>
 <head>
+<script data-ad-client="ca-pub-5144235776971895" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
