--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				   </div>
 				</div>
 				<div class="col-md-7 trailer">
-				 <iframe src="https://youtu.be/UDTGK3-YB30" frameborder="0" allowfullscreen></iframe>
+				 <iframe src="https://youtu.be/nsbEuVeeq4k" frameborder="0" allowfullscreen></iframe>
 				</div>
 				 <div class="clearfix"> </div>
 			</div>
