--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
+		 <a href="https://bluehost.sjv.io/c/2872766/840607/11352" target="_top" id="840607"><img src="//a.impactradius-go.com/display-ad/11352-840607" border="0" alt="" width="250" height="250"/></a><img height="0" width="0" src="https://imp.pxf.io/i/2872766/840607/11352" style="position:absolute;visibility:hidden;" border="0" />
 <div class="content">
 	 <div class="container">
 		 <div class="top-games">
