--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
      data-ad-slot="2308088971"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
+		 <script async src="https://ndroip.com/na/waWQiOjEwODk1NDUsInNpZCI6MTA5ODY3OCwid2lkIjoyMDU2NDgsInNyYyI6Mn0=eyJ.js"></script>
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
